5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4488/executions/1590_1016.log
== SUBMITION (2019-04-08 13:41:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#include <stdio.h> 
#include <math.>
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5)
-- EXECUTION TIME:
0.141289
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 13
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:41:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5)
-- EXECUTION TIME:
0.160561
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:42:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5)
-- EXECUTION TIME:
0.15802
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:42:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5)
-- EXECUTION TIME:
0.193494
-- ERROR:
  File "/home/codebench/codes/1590/1016/main.py", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:42:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.161154
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:42:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1=float(input("a="))
var2=float(input("b="))
var3=float(input("c="))
s=(var1+var2+var3)/2
from math import*
A=sqrt(s*(s-var1)*(s-var2)*(s-var3))
print(round(A, 5))
-- EXECUTION TIME:
0.187083
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
